--- a/index.html
+++ b/index.html
@@ -61,18 +61,20 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
+              <form netlify></form>
               <div class="modal-body">
-                <form>
-                  <div class="form-group">
-                    <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we
-                      launch</label>
-                    <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
-                  </div>
-                </form>
+
+                <div class="form-group">
+                  <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we
+                    launch</label>
+                  <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
+                </div>
+
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-default">Subscribe</button>
+                <button type="submit" class="btn btn-default">Subscribe</button>
               </div>
+              </form>
             </div>
           </div>
         </div>
