--- a/index.html
+++ b/index.html
@@ -61,19 +61,17 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <form netlify></form>
-              <div class="modal-body">
-
-                <div class="form-group">
-                  <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we
-                    launch</label>
-                  <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
+              <form netlify>
+                <div class="modal-body">
+                  <div class="form-group">
+                    <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we
+                      launch</label>
+                    <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
+                  </div>
                 </div>
-
-              </div>
-              <div class="modal-footer">
-                <button type="submit" class="btn btn-default">Subscribe</button>
-              </div>
+                <div class="modal-footer">
+                  <button type="submit" class="btn btn-default">Subscribe</button>
+                </div>
               </form>
             </div>
           </div>
