--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                   <div class="form-group">
                     <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we
                       launch</label>
-                    <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
+                    <input type="text" name="email" class="form-control" id="recipient-name"
+                      placeholder="your-name@example.com">
                   </div>
                 </div>
                 <div class="modal-footer">
